2006-07-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thailib.h: Add main page using content from libthai.3.

	* man/man3/libthai.3: Fix typos.

2006-07-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* include/thai/{thbrk,thcoll}.h: Fix typos in comments.

	* include/thai/{thwbrk,thwchar,thwcoll,thwctype,thwstr}.h:
	Edit comments for documentation.

	* include/thai/thwctype.h, src/thwctype/thwctype.c: Add missing
	functions corresponding to thctype: th_wcisthdiac,
	th_wcistaillesscons, th_wcisovershootcons, th_wcisundershootcons,
	th_wcisundersplitcons.

2006-07-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, Makefile.am, +doc/, +doc/Doxyfile.in,
	+doc/Makefile.am: Add document generation with doxygen.

	* include/thai/{thailib,thbrk,thcell,thcoll,thctype,thinp,thrend,
	thstr}.h: Edit comments for documentation.

2006-07-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thcoll/cweight.c (th_char_weight_()): Remove unnecessary check
	of c's range that always yields true.

	* src/thwchar/thwchar.c (uni2thai_ext_()): Fix loop condition that
	always yielded true due to range of data type.

2006-07-03  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thinp/thinp.c, src/thrend/thrend.c: Add missing <string.h>.

2006-05-04  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, src/Makefile.am: Add check and condition for Win32
	build with cygwin/mingw.

2006-03-13  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* NEWS, configure.in:
	Version 0.1.5.

2006-03-13  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* tests/test_thwbrk.c: Allocate more buffer for th_brk_line() output,
	fixing bogus bug that blocks the test.

2006-03-13  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* tests/test_thwbrk.c: Print out the strings in problem when the
	result from th_brk_line() and th_wbrk_line() do not match.

2006-03-13  Theppitak Karoonboonyanan <thep@linux.thai.net>
