@@ -25,7 +25,7 @@ ABBREVIATE_BRIEF       = "The $name class" \
 ALWAYS_DETAILED_SEC    = NO
 INLINE_INHERITED_MEMB  = NO
 FULL_PATH_NAMES        = YES
-STRIP_FROM_PATH        = @top_srcdir@
+STRIP_FROM_PATH        = @top_srcdir@/include
 STRIP_FROM_INC_PATH    = @top_srcdir@/include
 SHORT_NAMES            = NO
 JAVADOC_AUTOBRIEF      = NO
